# nx3d

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BACKLOG.md  CHANGELOG.md  DONE.md  LICENSE  README.md  TODO.md  commit  pyproject.toml  run.py
.github/workflows/: build_and_publish.yaml  lint_and_test.yaml
docs/: README.md  alternatives.rst  api.rst  conf.py  contribute.rst  examples.rst  index.rst  install.rst  limitations.rst  maturity.rst  notes.rst  support.rst  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/nx3d/: main.html
docs/_build/html/_static/: documentation_options.js
src/nx3d/: __init__.py  __main__.py  core.py  examples.py  graphs.py  main.py  mesh.py  simplified.py  snippets.py  types.py  utils.py
src/nx3d/data/: bent_directed_edge_3.bam  bent_undirected_edge_3.bam  cone.egg  cube.egg  cylinder.egg  icosphere.bam  icosphere.egg  icosphere_2.egg  icosphere_3.egg  pyramid.egg  pyramid_2.egg  undirected_edge_3.bam  unit_cylinder_base_at_0.egg
src/nx3d/examples/: __init__.py  diffusion.py  gameoflife.py  keyboard_control.py
src/nx3d_ekalosak/: nx3d.py
tests/: conftest.py  test_examples.py  test_nx3d.py
