[tool.poetry]
name = "nx3d"
version = "22.9.0"
description = "The missing 3D plotting functionality for networkx"
authors = ["Eric Kalosa-Kenyon <helloateric@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "src/nx3d_ekalosak/" }
]

[project.urls]
"Homepage" = "https://github.com/ekalosak/nx3d"
"Bug Tracker" = "https://github.com/ekalosak/nx3d/issues"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.8.6"
Panda3D = "^1.10.12"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
