[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
nx3d = "nx3d.__main__:main"

[tool.poetry]
name = "nx3d"
version = "22.10.2"
description = "The missing 3D plotting functionality for networkx"
authors = ["Eric Kalosa-Kenyon <helloateric@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/ekalosak/nx3d"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
networkx = "^2.8"
Panda3D = "^1.10"
numpy = "^1.23"
scipy = { version ="^1.9.1", optional = true }
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
panda3d-blend2bam = "^0.20"

[tool.mypy]
exclude = ['docs/']

[tool.isort]
profile = "black"
